--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ h1{
     background-color: blueviolet;
     font-family: Arial, sans-serif;
     font-weight: bold;
+    position: center;
+    color: darkslategray;
     }
 
 .lasagna{
