--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ h1{
     font-weight: bold;
     position: center;
     color: darkslategray;
+    margin-left: auto;
+    margin-right: auto;
     }
 
 .lasagna{
